Fix the alignment of the tables

--- a/php/css/index_style.css
+++ b/php/css/index_style.css
@@ -109,3 +109,13 @@ th {
 caption{
     font-size: 20px;
 }
+
+.flex-column {
+    flex-direction: column;
+    align-items: center;
+}
+
+.flex-row {
+    flex-direction: row;
+    align-items: start;
+}
